# kinova_pick_place

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: sensors_3d.yaml
data/pcd/cube/: cloud_no_table.pcd  cloud_passthrough.pcd  cloud_voxelgrid.pcd  cloud_with_obb_frame.pcd  cube_cluster.pcd  obb_corners.pcd
data/pcd/cylinder/: cloud_hull.pcd  cloud_no_table.pcd  cloud_top_lyr.pcd  cube_cluster.pcd
data/pcd/pyramid/: cloud_hull.pcd  cloud_no_table.pcd  cloud_top_lyr.pcd  cube_cluster.pcd
data/pcd/sphere/: cloud_hull.pcd  cloud_no_table.pcd  cloud_top_lyr.pcd  cube_cluster.pcd
include/kinova_pick_place/: color_cloud_detector.hpp  kinova_pick_place.hpp
launch/: bringup.launch.py  bringup_sim.launch.py  kinova_real_robot.launch.py  kinova_sim.launch.py  mtc_pick_place.launch.py
rviz/: display.rviz
scripts/: command_interpreter.py  voice_recognition.py
src/: color_cloud_detector.cpp  fake_cloud.cpp  kinova_pick_place.cpp
